# agentira-prototype

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml  docker-deploy.yml
src/: main.rs
static/: index.html
