[package]
name = "agentira_prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"

# WASM support
[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
lto = "thin"
codegen-units = 1